--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -12,7 +12,7 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 
 === Choong Jin Yao
 image::charliechoong.png[width="150", align="left"]
-{empty}[https://github.com/charliechoong[github]]
+{empty}[https://github.com/charliechoong[github]] [<<charliechoong#, portfolio>>]
 
 Role: Developer +
 Responsibilities: Code Quality, Documentation, Integration, Testing
