--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -347,6 +347,7 @@ The relationship between all the classes are shown in the following class diagra
 
 .Detailed Api Class Diagram
 image::ApiClassDiagram.png[width=600]
+// tag::apiimpl[]
 
 ==== Design Considerations
 
@@ -376,6 +377,7 @@ amount of memory used.
 *** Everytime the image is viewed, the application has to retrieve it from online making it more intensive on the network.
 *** If the internet connection fails, the image can no longer be viewed.
 //end::ImageRetrieval[]
+// end::apiimpl[]
 
 ==== Aspect: Recommendations
 Recommendations are generated through the `RecommendationEngine` class in the API package. Currently,
